@@ -1,6 +1,9 @@
 LIST OF CHANGES
 
- - npg_daemon_control: added a daemon for Elembio staging monitor
+ - npg_daemon_control: added a daemon for Elembio staging monitor 
+ - npg_tracking::Schema::Result::Instrument
+   - improved documentation,
+   - added shortcut methods to inform about instrument's manufacturer.
 
 release 105.1.0 (2025-05-15)
  - Create db records for AVITI instruments
